--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -182,7 +182,11 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.28</version>
+		</dependency>
 
 
 		<dependency>
