去掉多余启动文件

--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -249,6 +249,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
+					 <mainClass>com.itmuch.Application</mainClass>
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
