--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.freemarker.suffix=.ftl
 	
 #thymeleaf 静态资源配置
 spring.thymeleaf.prefix=classpath:templates/
-#spring.thymeleaf.suffix=.html
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html; charset=utf-8
