--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -242,7 +242,15 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
 	<build>
+		<!-- 设置打包的文件 -->
+		<resources>
+			<directory>src/main/java</directory>
+			<includes>
+				<include>**/*.xml</include>
+			</includes>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
