--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -246,10 +246,12 @@
 	<build>
 		<!-- 设置打包的文件 -->
 		<resources>
-			<directory>src/main/java</directory>
-			<includes>
-				<include>**/*.xml</include>
-			</includes>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
 		</resources>
 		<plugins>
 			<plugin>
