--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -249,7 +249,7 @@
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
-					<include>**/*.xml</include>
+					<include>**/*</include>
 				</includes>
 			</resource>
 		</resources>
