--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.thymeleaf.cache=false
 
 
 #数据源
-#spring.datasource.url=jdbc:mysql://123.206.14.25:3306/test?useSSL=false
+#spring.datasource.url=jdbc:mysql://123.206.14.25:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf8
 #spring.datasource.username=root
 #spring.datasource.password=Ws123456.
 spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
