--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -48,10 +48,10 @@ spring.thymeleaf.cache=false
 
 #数据源
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.password=Ws123456.
+#spring.datasource.password=123456
+spring.datasource.password=Ws123456.
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=ALWAYS
