--- a/miscsoft-service-provide-user/bin/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/bin/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.devtools.restart.additional-paths=src/main/java
 #classpath目录下文件修改不重启
 #spring.devtools.restart.exclude=WEB-INF/**
 #mybatis 热部署
-#restart.include.mapper=/mapper-[\\w-\\.]+jar
-#restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
+restart.include.mapper=/mapper-[\\w-\\.]+jar
+restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 
 #服务端配置
 server.port=80
@@ -47,11 +47,12 @@ spring.thymeleaf.cache=false
 
 
 #数据源
-
+#spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=Ws123456.
 spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.password=Ws123456.
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=ALWAYS
