--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.thymeleaf.cache=false
 
 #数据源
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.password=Ws123456.
