文本消息事件

--- a/miscsoft-service-provide-user/src/main/resources/wx.properties
+++ b/miscsoft-service-provide-user/src/main/resources/wx.properties
@@ -1,2 +1,8 @@
 wx.secret=c9c2fa884497ee352e9e1aaa1e6ff0ca
 wx.appid=wx1cafde6da508b631
+
+sykj.wx.appid=wx3f4e6b31d77b67b8
+sykj.wx.secret=aca8745f36fd6b8a44e64443407dc568
+
+sykj.wx.template=NDsC8serQ3LvdmTwX2gSp5wgUYOZAuAI-AIPr2BdiTg
+
