微信进入小程序则获取微信access_token,并上传位置信息

--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -71,7 +71,6 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -91,12 +90,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
@@ -341,11 +339,8 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
-					<include>**/*</include>
+					<include>**/*.* </include>
 				</includes>
-				<excludes>
-					<exclude>test/*</exclude>
-				</excludes>
 			</resource>
 		</resources>
 		<plugins>
@@ -353,7 +348,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<mainClass>com.itmuch.Application</mainClass>
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
