--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -74,7 +74,8 @@ spring.datasource.tomcat.test-on-borrow=true
 
 #mybatis配置
 mybatis.type-aliases-package=com.itmuch.model
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:/mapper/*.*
+mybatis.config-location=classpath:/mybatis-config.xml
 #通用mapper配置
 mapper.mappers=com.itmuch.util.MyMapper
 mapper.not-empty=false
