--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=user-provide
+
 #热部署
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
@@ -9,7 +11,6 @@ spring.devtools.restart.additional-paths=src/main/java
 #mybatis 热部署
 #restart.include.mapper=/mapper-[\\w-\\.]+jar
 #restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
-
 #服务端配置
 server.port=80
 server.servlet.session.persistent=true
@@ -47,13 +48,13 @@ spring.thymeleaf.cache=false
 
 
 #数据源
-#spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
-#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.password=123456
 
 spring.datasource.username=root
 
-spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.password=Ws123456.
+#spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+#spring.datasource.password=Ws123456.
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
@@ -75,7 +76,7 @@ spring.datasource.tomcat.test-on-borrow=true
 #mybatis配置
 mybatis.type-aliases-package=com.itmuch.model
 mybatis.mapper-locations=classpath:/mapper/*.*
-mybatis.config-location=classpath:/mybatis-config.xml
+#mybatis.config-location=classpath:/mybatis-config.xml
 #通用mapper配置
 mapper.mappers=com.itmuch.util.MyMapper
 mapper.not-empty=false
@@ -104,3 +105,6 @@ pagehelper.params=count=countSql
 #spring.redis.jedis.pool.min-idle=1
 ## 连接超时时间（毫秒）
 #spring.redis.timeout=0
+eureka.client.service-url.defaultZone=http://polunzi:123@127.0.0.1:7776/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${server.port}
