--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-provide
 
 #热部署
-spring.devtools.restart.enabled=true
+spring.devtools.restart.enabled=false
 spring.devtools.restart.additional-paths=src/main/java
 
 #排除不需要重启的目录
@@ -12,7 +12,7 @@ spring.devtools.restart.additional-paths=src/main/java
 #restart.include.mapper=/mapper-[\\w-\\.]+jar
 #restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 #服务端配置
-server.port=80
+server.port=81
 server.servlet.session.persistent=true
 server.servlet.jsp.init-parameters.development=true        
 #server.servlet.context-path=/demo
@@ -105,6 +105,6 @@ pagehelper.params=count=countSql
 #spring.redis.jedis.pool.min-idle=1
 ## 连接超时时间（毫秒）
 #spring.redis.timeout=0
-eureka.client.service-url.defaultZone=http://polunzi:123@127.0.0.1:7776/eureka/
+eureka.client.service-url.defaultZone=http://polunzi:123@123.206.14.25:7776/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${server.port}
