--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -53,8 +53,8 @@ spring.thymeleaf.cache=false
 
 spring.datasource.username=root
 
-spring.datasource.url=jdbc:mysql://123.206.14.25:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.password=Ws123456.
+spring.datasource.url=jdbc:mysql://62.234.95.108:3306/jshm?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.password=Wsa1583505.
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
@@ -105,6 +105,6 @@ pagehelper.params=count=countSql
 #spring.redis.jedis.pool.min-idle=1
 ## 连接超时时间（毫秒）
 #spring.redis.timeout=0
-eureka.client.service-url.defaultZone=http://polunzi:123@123.206.14.25:7776/eureka/
-eureka.instance.prefer-ip-address=true
-eureka.instance.instance-id=${spring.application.name}:${server.port}
+#eureka.client.service-url.defaultZone=http://polunzi:123@123.206.14.25:7776/eureka/
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.instance-id=${spring.application.name}:${server.port}
