--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -76,10 +76,6 @@
             <artifactId>spring-boot-starter-log4j</artifactId>
             <version>1.3.8.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <!--支持jsp -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -96,13 +92,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
+            <groupId>org.springframework.boot</groupId><!-- 引入这个包的时候,其实 springboot-start-web 和 springboot-start-tomcat 就引过来了 -->
             <artifactId>spring-boot-starter-web-services</artifactId>
-        </dependency>
-        <!-- tomcat 的支持. -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -237,10 +228,6 @@
         </dependency>
 
         <!-- xml工具dom4j和XStrean -->
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-        </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
