--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -108,3 +108,4 @@ pagehelper.params=count=countSql
 #eureka.client.service-url.defaultZone=http://polunzi:123@123.206.14.25:7776/eureka/
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.client.enabled=false
