取消eureka&shiro&redis-cluster

--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -109,3 +109,6 @@ pagehelper.params=count=countSql
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.client.enabled=false
+
+
+redis.cluster.hostAndPort=62.234.95.108:30001
