--- a/miscsoft-service-provide-user/src/main/resources/redis.properties
+++ b/miscsoft-service-provide-user/src/main/resources/redis.properties
@@ -4,7 +4,7 @@ spring.redis.database=0
 # Redis服务器地址
 #spring.redis.host=39.105.108.217
 #spring.redis.host=123.206.14.25
-spring.redis.host=localhost
+spring.redis.host=62.234.95.108
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
