--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -76,7 +76,7 @@ spring.datasource.tomcat.test-on-borrow=true
 #mybatis配置
 mybatis.type-aliases-package=com.itmuch.model
 mybatis.mapper-locations=classpath:/mapper/*.*
-#mybatis.config-location=classpath:/mybatis-config.xml
+mybatis.config-location=classpath:/mybatis-config.xml
 #通用mapper配置
 mapper.mappers=com.itmuch.util.MyMapper
 mapper.not-empty=false
