'项目架构图上传'

--- a/miscsoft-service-provide-user/pom.xml
+++ b/miscsoft-service-provide-user/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>common-code</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.n3r</groupId>
+            <artifactId>idworker</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 热部署 -->
         <!-- devtools可以实现页面热部署（即页面修改后会立即生效， 这个可以直接在application.properties文件中配置spring.thymeleaf.cache=false来实现） -->
         <!-- 实现类文件热部署（类文件修改后不会立即生效），实现对属性文件的热部署。 -->
