--- a/miscsoft-service-provide-user/src/main/resources/application.properties
+++ b/miscsoft-service-provide-user/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-provide
 
 #热部署
-spring.devtools.restart.enabled=false
+spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
 #排除不需要重启的目录
